==> CristXu/MIcropython-vega/ports/vega-pulpino/sdcard.c <==
#include <string.h>
#include "py/nlr.h"
#include "py/runtime.h"
#include "py/mphal.h"
#include "lib/oofatfs/ff.h"
#include "extmod/vfs_fat.h"
#include "fsl_debug_console.h"
#include "fsl_card.h"
#include "sdcard.h"
#include "bufhelper.h"
#define PIN6_IDX                         6u   /*!< Pin number for pin 6 in a port */
#define PIN7_IDX                         7u   /*!< Pin number for pin 7 in a port */
#define PIN8_IDX                         8u   /*!< Pin number for pin 8 in a port */
#define PIN9_IDX                         9u   /*!< Pin number for pin 9 in a port */
#define PIN10_IDX                       10u   /*!< Pin number for pin 10 in a port */
#define PIN11_IDX                       11u   /*!< Pin number for pin 11 in a port */
#define PIN27_IDX                       27u   /*!< Pin number for pin 27 in a port */

status_t sdcard_init(void) {
    // invalidate the g_sd
	// sdtest_main();
    g_sd.isHostReady = 0;
	
	_sdcard_pin_init();
	USDHCClockConfiguration();

    status_t error = kStatus_Success;

    g_sd.host.base = SD_HOST_BASEADDR;
    g_sd.host.sourceClock_Hz = SD_HOST_CLK_FREQ;


	/* wait card insert */
	uint32_t t1 = HAL_GetTick();
	PRINTF("Please insert the sdcard in 10s if needed!\r\n");
	while (!CardDetect())
	{
		// wait 5s to insert the sdcard if need
		if (( HAL_GetTick() -  t1 ) > 10000)
		{
			PRINTF("Boot without sdcard!\r\n");
			return kWithout_Sdcard;
		}
	}

	PRINTF("Card inserted.\r\n");
    /* Init card. */
    if (SD_Init(&g_sd))
    {
        mp_print_str(MP_PYTHON_PRINTER, "\n SD card init failed \n");
        error = kStatus_Fail;
    } else {
		
    }
    return error;
}

bool sdcard_is_present(void) {
	if (CardDetect() && g_sd.isHostReady)
		return 1;
	return 0;}

bool sdcard_power_on(void) {
    if (!sdcard_is_present()) {
        return false;
    }
    if (g_sd.isHostReady) {
        return true;
    }
	if (sdcard_init() == kStatus_Success)
		return 1;
	sdcard_deinit();
    return 0;
}

void sdcard_power_off(void) {
    if (!g_sd.isHostReady) {
        return;
    }
    SD_Deinit(&g_sd);
}

uint64_t sdcard_get_capacity_in_bytes(void) {
    if (g_sd.isHostReady == 0) {
        return 0;
    }
	return (uint64_t)g_sd.blockCount * g_sd.blockSize;
}

mp_uint_t sdcard_read_blocks(uint8_t *dest, uint32_t block_num, uint32_t num_blocks) {
    // check that SD card is initialised
    status_t ret;
    if (g_sd.isHostReady == 0) {
        return kStatus_Fail;
    }
	ret = SD_ReadBlocks(&g_sd, dest, block_num, num_blocks);
    return ret;
}

mp_uint_t sdcard_write_blocks(const uint8_t *src, uint32_t block_num, uint32_t num_blocks) {
    // check that SD card is initialised
    // check that SD card is initialised
    status_t ret;
    if (g_sd.isHostReady == 0) {
        return kStatus_Fail;
    }	
	ret = SD_WriteBlocks(&g_sd, src, block_num, num_blocks);
    return ret;
}

STATIC mp_obj_t sd_info(mp_obj_t self) {
    if (g_sd.isHostReady == 0 || CardDetect() == false) {
        return mp_const_none;
    }
    // cardinfo.SD_csd and cardinfo.SD_cid have lots of info but we don't use them
    mp_obj_t tuple[3] = {
        mp_obj_new_int_from_ull(g_sd.blockCount * g_sd.blockSize),
        mp_obj_new_int_from_uint(g_sd.blockSize),
        mp_obj_new_int(g_sd.busClock_Hz / 1000),
    };
    return mp_obj_new_tuple(3, tuple);
}
